--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,21 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8889:8888"
-#    volumes:
-#      - notebook-data:/home/jovyan
+    volumes:
+      - instruction-data:/home/jovyan
     restart: on-failure
     
     # replace the hashed password in this command with your own generated with IPython.lib.passwd
     command: start-notebook.sh --NotebookApp.password='sha1:fea45cdfb8a0:1b377bfa9e7a43c5f943f859160b7be4475a7d23' # --NotebookApp.base_url=/home/jovyan
+
+  instruction-rstudio:
+    build:
+      context: ./rstudio
+      dockerfile: Dockerfile
+    ports:
+      - "8787:8787"
+    volumes:
+      - instruction-data:/home/rstudio
 
   playground:
     build:
@@ -19,13 +28,22 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
-#    volumes:
-#      - notebook-data:/home/jovyan
+    volumes:
+      - playground-data:/home/jovyan
     restart: on-failure
     
     # replace the hashed password in this command with your own generated with IPython.lib.passwd
     command: start-notebook.sh --NotebookApp.password='sha1:fea45cdfb8a0:1b377bfa9e7a43c5f943f859160b7be4475a7d23' # --NotebookApp.base_url=/home/jovyan
 
+  playground-rstudio:
+    build:
+      context: ./rstudio
+      dockerfile: Dockerfile
+    ports:
+      - "8787:8787"
+    volumes:
+      - playground-data:/home/rstudio
 
-#volumes:
-#  notebook-data:
+volumes:
+  instruction-data:
+  playground-data:
